# head-first-design-patterns-cpp

./: .gitignore  CMakeLists.txt  README.md  design_patterns.md  design_principles.md
01-static-strategy/: main.cpp
01-strategy/: ducks.h  fly_behaviors.h  main.cpp  quack_behaviors.h
01-strategy-static/: ducks.h  fly_behaviors.h
02-observer/: current_conditions_display.h  display_element.h  forecast_display.h  main.cpp  observer.h  statistics_display.h  subject.h  weather_data.cpp  weather_data.h
03-decorator/: beverages.h  condiment_decorators.h  main.cpp
03-decorator-static/: beverages.h  condiment_decorators.h  main.cpp
04-factory/: chicago_style_pizzas.h  main.cpp  ny_style_pizzas.h  pizza_stores.h  pizzas.h
04-factory-simple/: main.cpp  pizza_store.h  pizzas.h  simple_pizza_factory.h
